--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
           >
           <ul class="site-nav">
             <li class="site-nav__item">
-              <a href="index.html" class="site-nav__link">Студия</a>
+              <a href="./index.html" class="site-nav__link">Студия</a>
             </li>
-            <li class="site-nav__item site-nav_current">
-              <a href="portfolio.html" class="site-nav__link">Портфолио</a>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link site-nav_current">Портфолио</a>
             </li>
             <li class="site-nav__item"><a href="#" class="site-nav__link">Контакты</a></li>
           </ul>
@@ -79,16 +79,16 @@
           </ul>
           <ul class="mobile-links">
             <li class="mobile__links">
-              <a class="mobile__socials" href="_blank">Intagram</a>
+              <a class="mobile__socials line" href="_blank">Intagram</a>
             </li>
             <li class="mobile__links">
-              <a class="mobile__socials" href="_blank">Twitter</a>
+              <a class="mobile__socials line" href="_blank">Twitter</a>
             </li>
             <li class="mobile__links">
-              <a class="mobile__socials" href="_blank">Facebook</a>
+              <a class="mobile__socials line" href="_blank">Facebook</a>
             </li>
             <li class="mobile__links">
-              <a class="mobile__socials" href="_blank">Linkedin</a>
+              <a class="mobile__socials line" href="_blank">Linkedin</a>
             </li>
           </ul>
         </div>
